--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
         {{{ body }}}
     </main>
 
-    <script src="/public/js/logout.js"></script>
+    <script src="/js/logout.js"></script>
 </body>
 
 </html>
