--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" id="password-login" required>
 
-    <button type="submit">Login</button>
+    <button type="submit" class="loginbtn">Login</button>
   </div>
 
 </form>
@@ -19,7 +19,7 @@
     <p>Please fill in this form to create an account.</p>
     <hr>
 
-    <label for="email"><b>Email</b></label>
+    <label for="email"><b>Username</b></label>
     <input type="text" placeholder="Enter username" id="username-signup" required>
 
     <label for="psw"><b>Password</b></label>
@@ -39,5 +39,5 @@
 
 
 
-<script src='/public/js/login.js'></script>
-<script src='/public/js/sigup.js'></script>
+<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
