--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,11 @@
     <nav class="nav nav-pills flex-column flex-sm-row">
         <a class="flex-sm-fill text-sm-center nav-link active" href="/">HOME</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="/dashboard">Dashboard</a>
+        {{log loggedIn}}
         {{#if loggedIn}}
         <a class="flex-sm-fill text-sm-center nav-link" href="/login">Logout</a>
         {{else}}
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Login</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="#" id="logout-link">Logout</a>
         {{/if}}
     </nav>
     <header>
