debugged login, dashboard, comments

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,7 +10,7 @@
       </div>
       <div class="card-body">
         <!-- Post content -->
-        <p class="card-text">{{content}}</p>
+        <p class="card-text">{{post_text}}</p>
       </div>
       <div class="card-footer">
         <!-- Display post creator and creation date -->
