--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
     <div class="card">
       <div class=" blog-bg">
         <!-- Display post title -->
-        <h5 class="card-title text-light">{{title}}</h5>
+        <h5 class="card-title text-dark">{{title}}</h5>
       </div>
       <div class="card-body">
         <!-- Provide a link to read the full post -->
