--- a/views/user-single-post.handlebars
+++ b/views/user-single-post.handlebars
@@ -23,7 +23,7 @@
         class="form-control"
         id="exampleFormControlTextarea1"
         rows="3"
-      >{{post.content}}</textarea>
+      >{{post.post_text}}</textarea>
     </div>
     <div class="card-footer d-flex footer-icons">
       <!-- Create a link to save the edited post (with a floppy disk icon) -->
