--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,12 @@ button:hover {
   display: table;
 }
 
+h1 {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
