--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,25 +11,31 @@
 </head>
 
 <body>
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/dashboard">Dashboard</a>
-        </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
 
-        {{log loggedIn}}
-        {{#if loggedIn}}
-        <li class="nav-item">
-            <a class="nav-link" href="#" id="logout-link">Logout</a>
-        </li>
-        {{else}}
-        <li class="nav-item">
-            <a class="nav-link disabled" href="/login">Login</a>
-        </li>
-        {{/if}}
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard">Dashboard</a>
+      </li>
+
+       {{#unless loggedIn}}
+      <li class="nav-item">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+
+      {{else}}
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="logout-link">Logout</a>
+      </li>
+      {{/unless}}
     </ul>
+  </div>
+</nav>
 
     <header>
         <h1>Let's talk Tech</h1>
@@ -37,7 +43,7 @@
     </header>
 
     <main>
-        {{{ body }}}
+        {{{body}}}
     </main>
 
    <script src="/js/logout.js"></script> 
