--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #1b4332">
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
 
@@ -38,8 +38,8 @@
 </nav>
 
     <header>
-        <h1>Let's talk Tech</h1>
-        <p>Welcome to Tech Blog, a place top learn and share about technology</p>
+        <h1>Let's Talk Tech</h1>
+        <p class="headerP">Welcome to Tech Blog, a place to learn and share about technology</p>
     </header>
 
     <main>
