--- a/views/user-single-post.handlebars
+++ b/views/user-single-post.handlebars
@@ -1,9 +1,8 @@
 <div class="container">
   <div class="card">
     <div class="card-header blog-bg text-light">
-      <!-- Display a label for the title input -->
       <label for="exampleFormControlTextarea1" class="form-label">Title</label>
-      <!-- Create a textarea input for editing the post title with the current title pre-filled -->
+      <!-- Input for editing the post title with the current title pre-filled -->
       <textarea
         id="edit-title"
         class="form-control"
