--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,43 +1,42 @@
-<form action="action_page.php" method="post" class="login-form w-50">
-  <div class="container w-50 p-3">
-    <h1>LogIn</h1>
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" id="username-login" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="password-login" required>
-
-    <button type="submit" class="loginbtn">Login</button>
+<div class="card text-center">
+  <div class="card-header">
+    Sign Up
+  </div>
+<form method="post" class="signup-form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Username</label>
+    <input type="text" class="form-control" id="username-signup" aria-describedby="emailHelp" placeholder="Enter username">
   </div>
 
-</form>
-
-
-<form action="action_page.php" class="signup-form w-50">
-  <div class="container w-50 p-3">
-    <h1>Sign Up</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
-
-    <label for="email"><b>Username</b></label>
-    <input type="text" placeholder="Enter username" id="username-signup" required>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="password-signup" required>
-
-  
-
-    
-
-    <div class="clearfix">
-
-      <button type="submit" class="signupbtn">Sign Up</button>
-    </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="password-signup" placeholder="Password" >
   </div>
+
+  <button type="submit" class="signupbtn btn btn-dark">Signup</button>
 </form>
+</div>
 
 
+<div class="card text-center">
+  <div class="card-header">
+    Login
+  </div>
+<form class="login-form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="text" class="form-control" id="username-login" aria-describedby="emailHelp" placeholder="Enter Username">
+  </div>
 
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="password-login" placeholder="Password">
+  </div>
+
+  <button type="submit" class="loginbtn btn btn-dark">Login</button>
+</form>
+</div>
 
 <script src="/js/login.js"></script>
 <script src="/js/signup.js"></script>
