--- a/views/user-single-post.handlebars
+++ b/views/user-single-post.handlebars
@@ -28,10 +28,10 @@
       <!-- Create a link to save the edited post (with a floppy disk icon) -->
       <a href="#" data-id="{{post.id}}" id="update-link">
         Save
-        <span><i class="fa-solid fa-floppy-disk"></i></span></a>
+        {{!-- <span><i class="fa-solid fa-floppy-disk"></i></span></a> --}}
       <!-- Create a link to delete the post (with a trash icon) -->
       <a href="#" data-id="{{post.id}}" id="delete-link">Delete
-        <span><i class="fa-solid fa-trash"></i></span></a>
+        {{!-- <span><i class="fa-solid fa-trash"></i></span></a> --}}
     </div>
   </div>
 </div>
