--- a/views/user-single-post.handlebars
+++ b/views/user-single-post.handlebars
@@ -24,7 +24,7 @@
         rows="3"
       >{{post.post_text}}</textarea>
     </div>
-    <div class="card-footer d-flex footer-icons">
+    <div class="card-footer d-flex">
       <!-- Create a link to save the edited post (with a floppy disk icon) -->
       <a href="#" data-id="{{post.id}}" id="update-link">
         Save
